fixed small layout bug

--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -127,7 +127,7 @@ html {
 .section,
 .section_start,
 .article {
-    margin-right: 21em;
+    margin-right: 20em;
 }
 .article .section {
     margin-right: 0;
